--- a/notebooks/convert_esc50.ipynb
+++ b/notebooks/convert_esc50.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:00.705995Z",
+     "start_time": "2024-05-29T22:36:59.777221Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,8 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:00.708259Z",
+     "start_time": "2024-05-29T22:37:00.706788Z"
+    }
+   },
    "outputs": [],
    "source": [
     "DATASET_PATH = '../data/raw/esc50'"
@@ -29,104 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:00.748452Z",
+     "start_time": "2024-05-29T22:37:00.708617Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>fold</th>\n",
-       "      <th>target</th>\n",
-       "      <th>category</th>\n",
-       "      <th>esc10</th>\n",
-       "      <th>src_file</th>\n",
-       "      <th>take</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1-100032-A-0.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>dog</td>\n",
-       "      <td>True</td>\n",
-       "      <td>100032</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1-100038-A-14.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>chirping_birds</td>\n",
-       "      <td>False</td>\n",
-       "      <td>100038</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1-100210-A-36.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36</td>\n",
-       "      <td>vacuum_cleaner</td>\n",
-       "      <td>False</td>\n",
-       "      <td>100210</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1-100210-B-36.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36</td>\n",
-       "      <td>vacuum_cleaner</td>\n",
-       "      <td>False</td>\n",
-       "      <td>100210</td>\n",
-       "      <td>B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1-101296-A-19.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>thunderstorm</td>\n",
-       "      <td>False</td>\n",
-       "      <td>101296</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            filename  fold  target        category  esc10  src_file take\n",
-       "0   1-100032-A-0.wav     1       0             dog   True    100032    A\n",
-       "1  1-100038-A-14.wav     1      14  chirping_birds  False    100038    A\n",
-       "2  1-100210-A-36.wav     1      36  vacuum_cleaner  False    100210    A\n",
-       "3  1-100210-B-36.wav     1      36  vacuum_cleaner  False    100210    B\n",
-       "4  1-101296-A-19.wav     1      19    thunderstorm  False    101296    A"
-      ]
+      "text/plain": "            filename  fold  target        category  esc10  src_file take\n0   1-100032-A-0.wav     1       0             dog   True    100032    A\n1  1-100038-A-14.wav     1      14  chirping_birds  False    100038    A\n2  1-100210-A-36.wav     1      36  vacuum_cleaner  False    100210    A\n3  1-100210-B-36.wav     1      36  vacuum_cleaner  False    100210    B\n4  1-101296-A-19.wav     1      19    thunderstorm  False    101296    A",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>filename</th>\n      <th>fold</th>\n      <th>target</th>\n      <th>category</th>\n      <th>esc10</th>\n      <th>src_file</th>\n      <th>take</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1-100032-A-0.wav</td>\n      <td>1</td>\n      <td>0</td>\n      <td>dog</td>\n      <td>True</td>\n      <td>100032</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1-100038-A-14.wav</td>\n      <td>1</td>\n      <td>14</td>\n      <td>chirping_birds</td>\n      <td>False</td>\n      <td>100038</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1-100210-A-36.wav</td>\n      <td>1</td>\n      <td>36</td>\n      <td>vacuum_cleaner</td>\n      <td>False</td>\n      <td>100210</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1-100210-B-36.wav</td>\n      <td>1</td>\n      <td>36</td>\n      <td>vacuum_cleaner</td>\n      <td>False</td>\n      <td>100210</td>\n      <td>B</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1-101296-A-19.wav</td>\n      <td>1</td>\n      <td>19</td>\n      <td>thunderstorm</td>\n      <td>False</td>\n      <td>101296</td>\n      <td>A</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:00.768290Z",
+     "start_time": "2024-05-29T22:37:00.749009Z"
+    }
+   },
    "outputs": [],
    "source": [
     "meta = meta[meta['category'] != 'chirping_birds']"
@@ -148,8 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:00.799163Z",
+     "start_time": "2024-05-29T22:37:00.769095Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Read files with librosa\n",
@@ -164,19 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:19.324708Z",
+     "start_time": "2024-05-29T22:37:00.799772Z"
+    }
+   },
    "outputs": [
     {
      "data": {
+      "text/plain": "  0%|          | 0/1960 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4d36658fd0b42bdaa3a5cd91614581c",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1960 [00:00<?, ?it/s]"
-      ]
+       "version_minor": 0,
+       "model_id": "9e24ebcf0f574f258fccd60c5206ba65"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -199,92 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:19.330493Z",
+     "start_time": "2024-05-29T22:37:19.325526Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>primary_label</th>\n",
-       "      <th>secondary_labels</th>\n",
-       "      <th>labels</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1-100032-A-0.wav</td>\n",
-       "      <td>silent</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1-100210-A-36.wav</td>\n",
-       "      <td>silent</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1-100210-B-36.wav</td>\n",
-       "      <td>silent</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1-101296-A-19.wav</td>\n",
-       "      <td>silent</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1-101296-B-19.wav</td>\n",
-       "      <td>silent</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            filename primary_label secondary_labels labels  rating\n",
-       "0   1-100032-A-0.wav        silent               []     []       5\n",
-       "2  1-100210-A-36.wav        silent               []     []       5\n",
-       "3  1-100210-B-36.wav        silent               []     []       5\n",
-       "4  1-101296-A-19.wav        silent               []     []       5\n",
-       "5  1-101296-B-19.wav        silent               []     []       5"
-      ]
+      "text/plain": "            filename primary_label secondary_labels  rating\n0   1-100032-A-0.wav        silent               []       5\n2  1-100210-A-36.wav        silent               []       5\n3  1-100210-B-36.wav        silent               []       5\n4  1-101296-A-19.wav        silent               []       5\n5  1-101296-B-19.wav        silent               []       5",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>filename</th>\n      <th>primary_label</th>\n      <th>secondary_labels</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1-100032-A-0.wav</td>\n      <td>silent</td>\n      <td>[]</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1-100210-A-36.wav</td>\n      <td>silent</td>\n      <td>[]</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1-100210-B-36.wav</td>\n      <td>silent</td>\n      <td>[]</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1-101296-A-19.wav</td>\n      <td>silent</td>\n      <td>[]</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1-101296-B-19.wav</td>\n      <td>silent</td>\n      <td>[]</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 83,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,8 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T22:37:19.357807Z",
+     "start_time": "2024-05-29T22:37:19.331022Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# write metadata to csv\n",
