--- a/notebooks/analyze_google_kd.ipynb
+++ b/notebooks/analyze_google_kd.ipynb
@@ -187,29 +187,63 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "all_columns = df.columns[:182]\n",
+    "total_df[\"primary_label\"] = total_df.iloc[:, :182].apply(lambda x: x.idxmax(), axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-04T08:44:06.285216Z",
+     "start_time": "2024-06-04T08:44:06.086207Z"
+    }
+   },
+   "id": "8de0e14307cbe4b8",
+   "execution_count": 52
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "     asbfly       ashdro1       ashpri1       ashwoo2   asikoe2       asiope1  \\\n0  0.987501  1.521984e-07  4.641677e-08  1.157198e-08  0.000002  4.541352e-09   \n1  0.167609  4.998558e-06  6.320889e-06  1.929095e-08  0.000017  1.779055e-07   \n2  0.998419  4.060961e-04  1.425495e-04  1.195038e-07  0.001032  8.460510e-09   \n3  0.020216  2.258941e-05  4.326599e-04  2.591792e-06  0.000125  1.461722e-06   \n4  0.000449  1.854787e-06  5.435721e-06  5.728171e-07  0.000061  1.468567e-07   \n\n        aspfly1       aspswi1       barfly1    barswa  ...   whiter2  \\\n0  2.196083e-07  1.045536e-09  5.756379e-07  0.000044  ...  0.000003   \n1  2.051557e-06  1.019628e-07  4.316464e-07  0.000027  ...  0.000002   \n2  1.821896e-05  9.033255e-07  1.337866e-05  0.000300  ...  0.000003   \n3  4.283588e-07  3.509085e-05  2.954996e-05  0.000136  ...  0.000001   \n4  1.026665e-05  2.881020e-06  1.114334e-06  0.000042  ...  0.000058   \n\n         whrmun       whtkin2    woosan       wynlau1       yebbab1  \\\n0  4.581374e-08  2.052622e-06  0.000009  5.434499e-09  2.054867e-07   \n1  1.047183e-08  2.545233e-07  0.000134  9.861542e-08  1.758546e-08   \n2  5.539795e-07  1.213593e-04  0.000203  1.554572e-07  1.116136e-06   \n3  1.150444e-05  1.765826e-04  0.000180  7.736972e-07  1.542380e-05   \n4  2.340791e-06  4.625209e-05  0.000338  1.487748e-06  5.217453e-06   \n\n        yebbul3   zitcis1             filename  rating  \n0  2.007613e-09  0.000005  asbfly/XC134896.ogg     5.0  \n1  2.486768e-08  0.000011  asbfly/XC164848.ogg     2.5  \n2  3.209346e-07  0.000021  asbfly/XC175797.ogg     2.5  \n3  1.463316e-07  0.000036  asbfly/XC207738.ogg     4.0  \n4  5.765142e-06  0.000053  asbfly/XC209218.ogg     4.0  \n\n[5 rows x 184 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>asbfly</th>\n      <th>ashdro1</th>\n      <th>ashpri1</th>\n      <th>ashwoo2</th>\n      <th>asikoe2</th>\n      <th>asiope1</th>\n      <th>aspfly1</th>\n      <th>aspswi1</th>\n      <th>barfly1</th>\n      <th>barswa</th>\n      <th>...</th>\n      <th>whiter2</th>\n      <th>whrmun</th>\n      <th>whtkin2</th>\n      <th>woosan</th>\n      <th>wynlau1</th>\n      <th>yebbab1</th>\n      <th>yebbul3</th>\n      <th>zitcis1</th>\n      <th>filename</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.987501</td>\n      <td>1.521984e-07</td>\n      <td>4.641677e-08</td>\n      <td>1.157198e-08</td>\n      <td>0.000002</td>\n      <td>4.541352e-09</td>\n      <td>2.196083e-07</td>\n      <td>1.045536e-09</td>\n      <td>5.756379e-07</td>\n      <td>0.000044</td>\n      <td>...</td>\n      <td>0.000003</td>\n      <td>4.581374e-08</td>\n      <td>2.052622e-06</td>\n      <td>0.000009</td>\n      <td>5.434499e-09</td>\n      <td>2.054867e-07</td>\n      <td>2.007613e-09</td>\n      <td>0.000005</td>\n      <td>asbfly/XC134896.ogg</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.167609</td>\n      <td>4.998558e-06</td>\n      <td>6.320889e-06</td>\n      <td>1.929095e-08</td>\n      <td>0.000017</td>\n      <td>1.779055e-07</td>\n      <td>2.051557e-06</td>\n      <td>1.019628e-07</td>\n      <td>4.316464e-07</td>\n      <td>0.000027</td>\n      <td>...</td>\n      <td>0.000002</td>\n      <td>1.047183e-08</td>\n      <td>2.545233e-07</td>\n      <td>0.000134</td>\n      <td>9.861542e-08</td>\n      <td>1.758546e-08</td>\n      <td>2.486768e-08</td>\n      <td>0.000011</td>\n      <td>asbfly/XC164848.ogg</td>\n      <td>2.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.998419</td>\n      <td>4.060961e-04</td>\n      <td>1.425495e-04</td>\n      <td>1.195038e-07</td>\n      <td>0.001032</td>\n      <td>8.460510e-09</td>\n      <td>1.821896e-05</td>\n      <td>9.033255e-07</td>\n      <td>1.337866e-05</td>\n      <td>0.000300</td>\n      <td>...</td>\n      <td>0.000003</td>\n      <td>5.539795e-07</td>\n      <td>1.213593e-04</td>\n      <td>0.000203</td>\n      <td>1.554572e-07</td>\n      <td>1.116136e-06</td>\n      <td>3.209346e-07</td>\n      <td>0.000021</td>\n      <td>asbfly/XC175797.ogg</td>\n      <td>2.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.020216</td>\n      <td>2.258941e-05</td>\n      <td>4.326599e-04</td>\n      <td>2.591792e-06</td>\n      <td>0.000125</td>\n      <td>1.461722e-06</td>\n      <td>4.283588e-07</td>\n      <td>3.509085e-05</td>\n      <td>2.954996e-05</td>\n      <td>0.000136</td>\n      <td>...</td>\n      <td>0.000001</td>\n      <td>1.150444e-05</td>\n      <td>1.765826e-04</td>\n      <td>0.000180</td>\n      <td>7.736972e-07</td>\n      <td>1.542380e-05</td>\n      <td>1.463316e-07</td>\n      <td>0.000036</td>\n      <td>asbfly/XC207738.ogg</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.000449</td>\n      <td>1.854787e-06</td>\n      <td>5.435721e-06</td>\n      <td>5.728171e-07</td>\n      <td>0.000061</td>\n      <td>1.468567e-07</td>\n      <td>1.026665e-05</td>\n      <td>2.881020e-06</td>\n      <td>1.114334e-06</td>\n      <td>0.000042</td>\n      <td>...</td>\n      <td>0.000058</td>\n      <td>2.340791e-06</td>\n      <td>4.625209e-05</td>\n      <td>0.000338</td>\n      <td>1.487748e-06</td>\n      <td>5.217453e-06</td>\n      <td>5.765142e-06</td>\n      <td>0.000053</td>\n      <td>asbfly/XC209218.ogg</td>\n      <td>4.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 184 columns</p>\n</div>"
+      "text/plain": "     asbfly       ashdro1       ashpri1       ashwoo2   asikoe2       asiope1  \\\n0  0.987501  1.521984e-07  4.641677e-08  1.157198e-08  0.000002  4.541352e-09   \n1  0.167609  4.998558e-06  6.320889e-06  1.929095e-08  0.000017  1.779055e-07   \n2  0.998419  4.060961e-04  1.425495e-04  1.195038e-07  0.001032  8.460510e-09   \n3  0.020216  2.258941e-05  4.326599e-04  2.591792e-06  0.000125  1.461722e-06   \n4  0.000449  1.854787e-06  5.435721e-06  5.728171e-07  0.000061  1.468567e-07   \n\n        aspfly1       aspswi1       barfly1    barswa  ...        whrmun  \\\n0  2.196083e-07  1.045536e-09  5.756379e-07  0.000044  ...  4.581374e-08   \n1  2.051557e-06  1.019628e-07  4.316464e-07  0.000027  ...  1.047183e-08   \n2  1.821896e-05  9.033255e-07  1.337866e-05  0.000300  ...  5.539795e-07   \n3  4.283588e-07  3.509085e-05  2.954996e-05  0.000136  ...  1.150444e-05   \n4  1.026665e-05  2.881020e-06  1.114334e-06  0.000042  ...  2.340791e-06   \n\n        whtkin2    woosan       wynlau1       yebbab1       yebbul3   zitcis1  \\\n0  2.052622e-06  0.000009  5.434499e-09  2.054867e-07  2.007613e-09  0.000005   \n1  2.545233e-07  0.000134  9.861542e-08  1.758546e-08  2.486768e-08  0.000011   \n2  1.213593e-04  0.000203  1.554572e-07  1.116136e-06  3.209346e-07  0.000021   \n3  1.765826e-04  0.000180  7.736972e-07  1.542380e-05  1.463316e-07  0.000036   \n4  4.625209e-05  0.000338  1.487748e-06  5.217453e-06  5.765142e-06  0.000053   \n\n              filename  rating  primary_label  \n0  asbfly/XC134896.ogg     5.0         asbfly  \n1  asbfly/XC164848.ogg     2.5         asbfly  \n2  asbfly/XC175797.ogg     2.5         asbfly  \n3  asbfly/XC207738.ogg     4.0        copbar1  \n4  asbfly/XC209218.ogg     4.0        houcro1  \n\n[5 rows x 185 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>asbfly</th>\n      <th>ashdro1</th>\n      <th>ashpri1</th>\n      <th>ashwoo2</th>\n      <th>asikoe2</th>\n      <th>asiope1</th>\n      <th>aspfly1</th>\n      <th>aspswi1</th>\n      <th>barfly1</th>\n      <th>barswa</th>\n      <th>...</th>\n      <th>whrmun</th>\n      <th>whtkin2</th>\n      <th>woosan</th>\n      <th>wynlau1</th>\n      <th>yebbab1</th>\n      <th>yebbul3</th>\n      <th>zitcis1</th>\n      <th>filename</th>\n      <th>rating</th>\n      <th>primary_label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.987501</td>\n      <td>1.521984e-07</td>\n      <td>4.641677e-08</td>\n      <td>1.157198e-08</td>\n      <td>0.000002</td>\n      <td>4.541352e-09</td>\n      <td>2.196083e-07</td>\n      <td>1.045536e-09</td>\n      <td>5.756379e-07</td>\n      <td>0.000044</td>\n      <td>...</td>\n      <td>4.581374e-08</td>\n      <td>2.052622e-06</td>\n      <td>0.000009</td>\n      <td>5.434499e-09</td>\n      <td>2.054867e-07</td>\n      <td>2.007613e-09</td>\n      <td>0.000005</td>\n      <td>asbfly/XC134896.ogg</td>\n      <td>5.0</td>\n      <td>asbfly</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.167609</td>\n      <td>4.998558e-06</td>\n      <td>6.320889e-06</td>\n      <td>1.929095e-08</td>\n      <td>0.000017</td>\n      <td>1.779055e-07</td>\n      <td>2.051557e-06</td>\n      <td>1.019628e-07</td>\n      <td>4.316464e-07</td>\n      <td>0.000027</td>\n      <td>...</td>\n      <td>1.047183e-08</td>\n      <td>2.545233e-07</td>\n      <td>0.000134</td>\n      <td>9.861542e-08</td>\n      <td>1.758546e-08</td>\n      <td>2.486768e-08</td>\n      <td>0.000011</td>\n      <td>asbfly/XC164848.ogg</td>\n      <td>2.5</td>\n      <td>asbfly</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.998419</td>\n      <td>4.060961e-04</td>\n      <td>1.425495e-04</td>\n      <td>1.195038e-07</td>\n      <td>0.001032</td>\n      <td>8.460510e-09</td>\n      <td>1.821896e-05</td>\n      <td>9.033255e-07</td>\n      <td>1.337866e-05</td>\n      <td>0.000300</td>\n      <td>...</td>\n      <td>5.539795e-07</td>\n      <td>1.213593e-04</td>\n      <td>0.000203</td>\n      <td>1.554572e-07</td>\n      <td>1.116136e-06</td>\n      <td>3.209346e-07</td>\n      <td>0.000021</td>\n      <td>asbfly/XC175797.ogg</td>\n      <td>2.5</td>\n      <td>asbfly</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.020216</td>\n      <td>2.258941e-05</td>\n      <td>4.326599e-04</td>\n      <td>2.591792e-06</td>\n      <td>0.000125</td>\n      <td>1.461722e-06</td>\n      <td>4.283588e-07</td>\n      <td>3.509085e-05</td>\n      <td>2.954996e-05</td>\n      <td>0.000136</td>\n      <td>...</td>\n      <td>1.150444e-05</td>\n      <td>1.765826e-04</td>\n      <td>0.000180</td>\n      <td>7.736972e-07</td>\n      <td>1.542380e-05</td>\n      <td>1.463316e-07</td>\n      <td>0.000036</td>\n      <td>asbfly/XC207738.ogg</td>\n      <td>4.0</td>\n      <td>copbar1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.000449</td>\n      <td>1.854787e-06</td>\n      <td>5.435721e-06</td>\n      <td>5.728171e-07</td>\n      <td>0.000061</td>\n      <td>1.468567e-07</td>\n      <td>1.026665e-05</td>\n      <td>2.881020e-06</td>\n      <td>1.114334e-06</td>\n      <td>0.000042</td>\n      <td>...</td>\n      <td>2.340791e-06</td>\n      <td>4.625209e-05</td>\n      <td>0.000338</td>\n      <td>1.487748e-06</td>\n      <td>5.217453e-06</td>\n      <td>5.765142e-06</td>\n      <td>0.000053</td>\n      <td>asbfly/XC209218.ogg</td>\n      <td>4.0</td>\n      <td>houcro1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 185 columns</p>\n</div>"
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_df.head()"
+    "total_df.head()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T08:30:06.345813Z",
-     "start_time": "2024-06-04T08:30:06.337640Z"
+     "end_time": "2024-06-04T08:44:07.652848Z",
+     "start_time": "2024-06-04T08:44:07.645379Z"
     }
    },
    "id": "ddf7fa9be164cdd5",
-   "execution_count": 46
+   "execution_count": 53
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#save total df to file\n",
+    "total_df.to_csv(\"../data/raw/2024gxeno/train_metadata.csv\", index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-04T08:44:23.795997Z",
+     "start_time": "2024-06-04T08:44:21.572082Z"
+    }
+   },
+   "id": "fb6378604ec4190b",
+   "execution_count": 54
   },
   {
    "cell_type": "code",
