Add stage 1 support

--- a/notebooks/freefield_exploration.ipynb
+++ b/notebooks/freefield_exploration.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-04T10:25:06.789607Z",
-     "start_time": "2024-06-04T10:25:06.610850Z"
+     "end_time": "2024-06-04T12:08:23.031560Z",
+     "start_time": "2024-06-04T12:08:22.862200Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T10:25:06.799295Z",
-     "start_time": "2024-06-04T10:25:06.790524Z"
+     "end_time": "2024-06-04T12:08:23.171785Z",
+     "start_time": "2024-06-04T12:08:23.161482Z"
     }
    },
    "id": "f4ebe457269181ac",
@@ -60,14 +60,16 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 7690 entries, 0 to 7689\n",
-      "Data columns (total 3 columns):\n",
+      "Data columns (total 5 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
       " 0   itemid     7690 non-null   int64 \n",
       " 1   datasetid  7690 non-null   object\n",
       " 2   hasbird    7690 non-null   int64 \n",
-      "dtypes: int64(2), object(1)\n",
-      "memory usage: 180.4+ KB\n"
+      " 3   metaid     7690 non-null   object\n",
+      " 4   filename   7690 non-null   object\n",
+      "dtypes: int64(2), object(3)\n",
+      "memory usage: 300.5+ KB\n"
      ]
     }
    ],
@@ -80,8 +82,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T10:25:06.830897Z",
-     "start_time": "2024-06-04T10:25:06.799845Z"
+     "end_time": "2024-06-04T12:08:24.834759Z",
+     "start_time": "2024-06-04T12:08:24.827613Z"
     }
    },
    "id": "b7e7226c6a11e8b3",
@@ -92,8 +94,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "   itemid   datasetid  hasbird    metaid filename\n0      55  ff1010bird        0   55.json   55.wav\n1      87  ff1010bird        0   87.json   87.wav\n2      99  ff1010bird        0   99.json   99.wav\n3     100  ff1010bird        1  100.json  100.wav\n4     104  ff1010bird        0  104.json  104.wav",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>itemid</th>\n      <th>datasetid</th>\n      <th>hasbird</th>\n      <th>metaid</th>\n      <th>filename</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>55</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>55.json</td>\n      <td>55.wav</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>87</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>87.json</td>\n      <td>87.wav</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>99</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>99.json</td>\n      <td>99.wav</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>100</td>\n      <td>ff1010bird</td>\n      <td>1</td>\n      <td>100.json</td>\n      <td>100.wav</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>104</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>104.json</td>\n      <td>104.wav</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   itemid   datasetid  hasbird    metaid filename  rating\n0      55  ff1010bird        0   55.json   55.wav       5\n1      87  ff1010bird        0   87.json   87.wav       5\n2      99  ff1010bird        0   99.json   99.wav       5\n3     100  ff1010bird        1  100.json  100.wav       5\n4     104  ff1010bird        0  104.json  104.wav       5",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>itemid</th>\n      <th>datasetid</th>\n      <th>hasbird</th>\n      <th>metaid</th>\n      <th>filename</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>55</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>55.json</td>\n      <td>55.wav</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>87</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>87.json</td>\n      <td>87.wav</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>99</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>99.json</td>\n      <td>99.wav</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>100</td>\n      <td>ff1010bird</td>\n      <td>1</td>\n      <td>100.json</td>\n      <td>100.wav</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>104</td>\n      <td>ff1010bird</td>\n      <td>0</td>\n      <td>104.json</td>\n      <td>104.wav</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 4,
      "metadata": {},
@@ -102,14 +104,15 @@
    ],
    "source": [
     "# sort by item id\n",
+    "meta_df[\"rating\"] = 5\n",
     "meta_df = meta_df.sort_values(by=\"itemid\").reset_index(drop=True)\n",
-    "meta_df.head()"
+    "meta_df.head()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T10:25:06.859337Z",
-     "start_time": "2024-06-04T10:25:06.831663Z"
+     "end_time": "2024-06-04T12:08:36.348785Z",
+     "start_time": "2024-06-04T12:08:36.342316Z"
     }
    },
    "id": "b4e1ba28c9e9c896",
@@ -125,12 +128,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T10:40:17.156185Z",
-     "start_time": "2024-06-04T10:40:17.147432Z"
+     "end_time": "2024-06-04T12:08:42.396043Z",
+     "start_time": "2024-06-04T12:08:42.388112Z"
     }
    },
    "id": "8b6ed2c37a1aa595",
-   "execution_count": 15
+   "execution_count": 5
   },
   {
    "cell_type": "code",
